--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,10 @@ jobs:
         run: npm install --no-audit --no-fund
 
       - name: Build React app
-        run: npm run build
-        env:
-          VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}
+        
+        run: |
+          echo "VITE_BASE_URL=${{ secrets.VITE_BASE_URL }}" > .env
+          npm run build
 
       - name: Install sshpass
         run: sudo apt-get install -y sshpass
